--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@codemirror/lang-markdown": "^6.2.0",
     "@codemirror/language": "^6.9.0",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@replit/codemirror-minimap": "^0.5.2",
     "highlight.js": "^11.8.0",
     "html2pdf.js": "^0.10.1",
     "jszip": "^3.10.1",
